--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 #hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "http2", "tls12", "webpki-tokio"] }
-hyper = { version = "0.14", default-features = false, features = ["tcp", "server", "client", "http1", "http2"] }
+hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2"] }
 tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
-futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+futures-util = { version = "0.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 #rustls = { version = "0.20", default-features = false }
 tracing-subscriber = "0.3"
@@ -19,11 +19,12 @@ tokio-rustls = { version = "0.23", default-features = false, features = ["defaul
 left-right = "0.11"
 serde_json = "1.0"
 rustls-pemfile = "1.0"
+mime = "0.3"
 
 [profile.release]
 lto = true
 codegen-units = 1
-panic = "abort"
+panic = "unwind"
 strip = true
 
 # by overriding our dependencies' compilation settings, we can further optimize for size
