--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "http2", "tls12", "webpki-tokio"] }
+tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
 hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2"] }
-tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
+tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
 futures-util = { version = "0.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-#rustls = { version = "0.20", default-features = false }
 tracing-subscriber = "0.3"
-async-trait = "0.1"
-serde_yaml = "0.9"
-tracing = "0.1"
-pin-project-lite = "0.2"
-tokio-rustls = { version = "0.23", default-features = false, features = ["default", "tls12"] }
-left-right = "0.11"
-serde_json = "1.0"
 rustls-pemfile = "1.0"
+webpki-roots = "0.22"
+async-trait = "0.1"
+pin-project = "1.0"
+serde_yaml = "0.9"
+once_cell = "1.15"
+tracing = "0.1"
 mime = "0.3"
 
 [profile.release]
