--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
-hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2"] }
+hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2", "tcp"] }
 tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
 futures-util = { version = "0.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
