--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ hyper = { version = "0.14", default-features = false, features = ["server", "cli
 tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
 futures-util = { version = "0.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-tracing-subscriber = "0.3"
-rustls-pemfile = "1.0"
-webpki-roots = "0.22"
-async-trait = "0.1"
-pin-project = "1.0"
-serde_yaml = "0.9"
-once_cell = "1.15"
-tracing = "0.1"
-mime = "0.3"
+tracing-subscriber = { version = "0.3", default-features = false }
+rustls-pemfile = { version = "1.0", default-features = false }
+webpki-roots = { version = "0.22", default-features = false }
+async-trait = { version = "0.1", default-features = false }
+pin-project = { version = "1.0", default-features = false }
+serde_yaml = { version = "0.9", default-features = false }
+once_cell = { version = "1.15", default-features = false }
+tracing = { version = "0.1", default-features = false }
+mime = { version = "0.3", default-features = false }
 
 [profile.release]
 lto = true
