--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
+tokio = { version = "1.23", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
 hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2", "tcp"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
 tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
 futures-util = { version = "0.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-tracing-subscriber = { version = "0.3", default-features = false }
 rustls-pemfile = { version = "1.0", default-features = false }
 webpki-roots = { version = "0.22", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 pin-project = { version = "1.0", default-features = false }
 serde_yaml = { version = "0.9", default-features = false }
-once_cell = { version = "1.15", default-features = false }
+once_cell = { version = "1.16", default-features = false }
 tracing = { version = "0.1", default-features = false }
 mime = { version = "0.3", default-features = false }
 
